--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,13 @@
-.Rproj.user
-.Rhistory
-.RData
-.Ruserdata
-# History files
+# Ignore
+*.csv
+.log
 .Rapp.history
-# Example code in package build process
-*-Ex.R
-# RStudio files
+.RData
+.Rhistory
 .Rproj.user/
-# produced vignettes
-vignettes/*.html
-vignettes/*.pdf
-# OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
-.httr-oauth
-outputs/
-*.rda
-*.db
-GADM_2\.8_CAN_adm1\.rds
 .Rproj.user
-modules/LBMR_1\.3\.0\.9001\.zip
 *.tif
-modules/
-NFI_MAP_V0_metadata\.xls
-*inputs/
+*.R.save
+*.swp
+
 cache/
-temp/*
-/data
