--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,7 @@
 *.swp
 
 cache/
+modules/
+#This hides all LBMR files in Ian's local repo
+outputs/
+#this is to hide all 700 years of cohortData in Ian's local repo
