gitignore htlm folders and  badge images

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,10 @@ temp
 *.pdf
 
 inputs/
+
+## these are downloaded automatically, no point in caching
+figures/*Badge.png
+
+## html cache/files
+*_cache/
+*_files/
