--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,6 @@ outputs/
 ## html cache/files
 *_cache/
 *_files/
+
+## these are downloaded automatically, no point in caching
+figures/*Badge.png
